--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,10 @@
   "compilerOptions": {
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
+    "paths": {
+      "@env/*": [ "src/environments/*" ],
+      "@mocks/*": ["src/assets/mocks/*"]
+    },
     "sourceMap": true,
     "declaration": false,
     "downlevelIteration": true,
